Added:Added vilidate phone number

--- a/simple_form.css
+++ b/simple_form.css
@@ -54,3 +54,12 @@ error-output{
     font-style: italic;
     color: red;
 }
+    
+/* const pwd = document.querySelector('#pwd');
+const pwdError = document.querySelector('.pwd-error'); 
+pwd.addEventListener('input', function() {
+let nameRegex = RegExp('^[A-Z]{1}[a-z]{2,}$'); 
+if (nameRegex.test(pwd.value))
+  pwdError.textContent = "";
+else pwdError.textContent = "Password is Incorrect";
+}); */
